<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFEFD1"
    android:clickable="true"
    android:gravity="bottom|center_vertical|fill"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="9sp"
        android:gravity="center|fill"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="7sp"
            android:text="@string/dial"
            android:textColor="#0000AB"
            android:textSize="23sp" />

        <AutoCompleteTextView
            android:id="@+id/searchView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="2dp"
            android:ems="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/search"
            android:textColor="#0000AB"
            android:textSize="17sp" >

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/callButton"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="3sp"
            android:background="#A2B3CF"
            android:text="@string/call" />

        <Button
            android:id="@+id/msgButton"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="1sp"
            android:layout_marginTop="3sp"
            android:background="#A2B3CF"
            android:text="@string/msg" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/contactsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:textColor="#CE945D"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>